--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Destinazioni
           </a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu  bg-primary " style="--bs-bg-opacity: .8;">
             <li><a class="dropdown-item" href="#">Nord</a></li>
             <li><a class="dropdown-item" href="#">Sud</a></li>
             <li>Città imperiali</li>
@@ -107,6 +107,6 @@
       ISCRIVITI ALLA NEWSLETTER: NIENTE SPAM, SOLO TANTI VIAGGI! 
     </div>
  <!-- </nav>-->
- 
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
